adding client side consumer of notifications

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=test-streams
-spring.cloud.stream.bindings.myConsumer.destination=myConsumer
-spring.cloud.stream.bindings.myConsumer.group=myGroup
+spring.application.name=streams-app
+spring.cloud.stream.bindings.myConsumer.destination=messages
 spring.cloud.stream.bindings.myConsumer.contentType=application/json
+spring.cloud.stream.bindings.myProducer.destination=notifications
+spring.cloud.stream.bindings.myProducer.contentType=application/json
