--- a/src/test/resources/test-application.properties
+++ b/src/test/resources/test-application.properties
@@ -1,6 +1,5 @@
 spring.application.name=test-streams
-spring.cloud.stream.bindings.myConsumer.destination=myConsumer
-spring.cloud.stream.bindings.myConsumer.group=myGroup
-spring.cloud.stream.bindings.myConsumer.contentType=application/json
-spring.cloud.stream.bindings.myProducer.destination=myConsumer
-spring.cloud.stream.bindings.myProducer.contentType=application/json
+spring.cloud.stream.bindings.myClientProducer.destination=messages
+spring.cloud.stream.bindings.myClientProducer.contentType=application/json
+spring.cloud.stream.bindings.myClientConsumer.destination=notifications
+spring.cloud.stream.bindings.myClientConsumer.contentType=application/json
