updating example to deal with complex data and @StreamListeners

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.cloud.stream.bindings.myConsumer.destination=messages
 spring.cloud.stream.bindings.myConsumer.contentType=application/json
 spring.cloud.stream.bindings.myProducer.destination=notifications
 spring.cloud.stream.bindings.myProducer.contentType=application/json
+spring.cloud.stream.bindings.myComplexProducer.destination=complex-notifications
+spring.cloud.stream.bindings.myComplexProducer.contentType=application/json
