--- a/src/test/resources/test-application.properties
+++ b/src/test/resources/test-application.properties
@@ -3,3 +3,5 @@ spring.cloud.stream.bindings.myClientProducer.destination=messages
 spring.cloud.stream.bindings.myClientProducer.contentType=application/json
 spring.cloud.stream.bindings.myClientConsumer.destination=notifications
 spring.cloud.stream.bindings.myClientConsumer.contentType=application/json
+spring.cloud.stream.bindings.myClientComplexConsumer.destination=complex-notifications
+spring.cloud.stream.bindings.myClientComplexConsumer.contentType=application/json
